*** Phase 5 *** * Retrofitted ReadableBuffer and WritableBuffer as util.RetainableByteBuffer (only get*() APIs) and util.RetainableByteBuffer.Mutable (both get()* inherited from RetainableByteBuffer and put*() APIs). * Now RetainableByteBuffer is auto-flipping, so it does not need any "flip" operation, nor separated classes. * Typical fill-parse would allocate a RetainableByteBuffer.Mutable, fill it, and then pass it to the parser as a RetainableByteBuffer as-is.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>