@@ -20,8 +20,8 @@ import org.eclipse.jetty.http3.frames.GoAwayFrame;
 import org.eclipse.jetty.http3.generator.ControlGenerator;
 import org.eclipse.jetty.http3.parser.ControlParser;
 import org.eclipse.jetty.http3.parser.ParserListener;
-import org.eclipse.jetty.io.ByteBufferPool;
-import org.eclipse.jetty.io.RetainableByteBuffer;
+import org.eclipse.jetty.io.WritableBufferPool;
+import org.eclipse.jetty.util.buffer.RetainableByteBuffer;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -34,8 +34,8 @@ public class GoAwayGenerateParseTest
     {
         GoAwayFrame input = GoAwayFrame.CLIENT_GRACEFUL;
 
-        ByteBufferPool bufferPool = ByteBufferPool.NON_POOLING;
-        RetainableByteBuffer.Mutable accumulator = new RetainableByteBuffer.DynamicCapacity(bufferPool, true, -1, 0, 0);
+        WritableBufferPool bufferPool = WritableBufferPool.NON_POOLING;
+        List<RetainableByteBuffer> accumulator = new ArrayList<>();
         new ControlGenerator(bufferPool, true).generate(accumulator, 0, input, null);
 
         List<GoAwayFrame> frames = new ArrayList<>();
@@ -47,11 +47,12 @@ public class GoAwayGenerateParseTest
                 frames.add(frame);
             }
         });
-        parser.parse(accumulator.getByteBuffer());
-        assertFalse(accumulator.hasRemaining());
+        RetainableByteBuffer buffer = RetainableByteBuffer.wrap(accumulator);
+        parser.parse(buffer);
+        assertFalse(buffer.hasRemaining());
 
         assertEquals(1, frames.size());
-        GoAwayFrame output = frames.get(0);
+        GoAwayFrame output = frames.getFirst();
 
         assertEquals(input.getLastId(), output.getLastId());
     }
